# PubChemDownloader

./: Cargo.toml  cids.txt  molecules.txt  smiles.txt
src/: main.rs
